--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <title>Intro to jQuery!</title>
     
-        <script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/jquery-3.7.1.js"></script>
         <script src="node_modules\jquery\dist\jquery.min.js"></script>
        <script src= "index.js"> </script>
        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
