--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Intro to jQuery!</title>
     
         <script src="js/jquery-3.7.1.js"></script>
-        <script src="node_modules\jquery\dist\jquery.min.js"></script>
+        <script src="node_modules/jquery/dist/jquery.js"></script>
        <script src= "index.js"> </script>
        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
        
