--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <title>Intro to jQuery!</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="js/jquery-3.7.1.js"></script>
         <script src="node_modules/jquery/dist/jquery.js"></script>
        <script src= "index.js"> </script>
