--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
         <title>Intro to jQuery!</title>
-    
-        <script src="js/jquery-3.7.1.min.js"></script>
-        <script src="node_modules\jquery\dist\jquery.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+         <!-- <script src="js/jquery-3.7.1.min.js"></script> -->
+        <script src="node_modules\jquery\dist\jquery.js"></script>
        <script src= "index.js"> </script>
        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+       <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
        
 </head>
 
