--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
          <!-- <script src="js/jquery-3.7.1.min.js"></script> -->
         <script src="node_modules\jquery\dist\jquery.js"></script>
        <script src= "index.js"> </script>
-       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-       <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+       <script src="jquery-ui/jquery-ui.min.js"></script>
+
        
 </head>
 
