--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <title>Intro to jQuery!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src="js/jquery-3.7.1.js"></script>
+        
         <script src="node_modules/jquery/dist/jquery.js"></script>
        <script src= "index.js"> </script>
        <script src="jquery-ui/jquery-ui.min.js"></script>
@@ -52,3 +52,4 @@
         }
     </style>
 </body>
+</html>
