--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Intro to jQuery!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
         
-        <script src="node_modules/jquery/dist/jquery.js"></script>
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
        
        <script src="jquery-ui/jquery-ui.min.js"></script>
         <script src= "index.js"> </script>
